--- a/dev/partials/indicators/list.html
+++ b/dev/partials/indicators/list.html
@@ -43,7 +43,7 @@
 	</div>
 </div>
 
-<a class="btn btn-default" ui-sref="main.indicator.edit({indicatorId: 'new'})" acl-require-role="indicator">
+<a class="btn btn-default" ui-sref="main.indicator.edit({indicatorId: 'new'})" acl-has-role="indicator">
 	<i class="fa fa-plus"></i>
 	<span translate="indicator.create_new"></span>
 </a>
