--- a/dev/partials/projects/list.html
+++ b/dev/partials/projects/list.html
@@ -26,7 +26,7 @@
 	</tbody>
 </table>
 
-<a class="btn btn-default" ui-sref="main.project.logical_frame({projectId: 'new'})" acl-require-role="project_create">
+<a class="btn btn-default" ui-sref="main.project.logical_frame({projectId: 'new'})" acl-has-role="project_create">
 	<i class="fa fa-plus"></i>
 	<span translate="project.create"></span>
 </a>
