--- a/dev/partials/projects/menu.html
+++ b/dev/partials/projects/menu.html
@@ -7,7 +7,7 @@
 				   tooltip="{{'project.logical_frame_tooltip'|translate}}"
 				   tooltip-popup-delay="1000">
 				   <i class="fa fa-building-o fa-fw"></i>
-				   <span translate>shared.logical_frame</span>
+				   <span translate="shared.logical_frame"></span>
 				</a>
 			</li>
 			
@@ -36,7 +36,7 @@
 				   tooltip-popup-delay="1000">
 
 					<i class="fa fa-file-text-o fa-fw"></i>
-					<span translate>project.input_forms</span>
+					<span translate="project.input_forms"></span>
 				</a>
 			</li>
 			
@@ -45,7 +45,7 @@
 				   tooltip="{{'project.waiting_inputs_tooltip'|translate}}"
 				   tooltip-popup-delay="1000">
 					<i class="fa fa-clock-o fa-fw"></i>
-					<span translate>project.waiting_inputs</span>
+					<span translate="project.waiting_inputs"></span>
 				</a>
 			</li>
 
@@ -54,7 +54,7 @@
 				   tooltip="{{'project.reporting_tooltip'|translate}}"
 				   tooltip-popup-delay="1000">
 				   <i class="fa fa-line-chart fa-fw"></i>
-				   <span translate>shared.reporting</span>
+				   <span translate="shared.reporting"></span>
 				</a>
 			</li>
 
@@ -63,7 +63,7 @@
 				   tooltip="{{'project.user_list_tooltip'|translate}}"
 				   tooltip-popup-delay="1000">
 				   <i class="fa fa-users fa-fw"></i>
-				   <span translate>project.users</span>
+				   <span translate="project.users"></span>
 				</a>
 			</li>
 		</ul>
