--- a/dev/partials/projects/form-edit.html
+++ b/dev/partials/projects/form-edit.html
@@ -13,7 +13,7 @@
 
 		<div class="form-group" show-errors>
 			<label for="input-name" class="col-sm-2 control-label" translate="shared.name"></label>
-			<div class="col-sm-10">
+			<div class="col-sm-10" acl-has-project-role="owner" acl-fallback="form.name">
 				<input type="text"
 					   class="form-control"
 					   id="input-name"
@@ -28,7 +28,7 @@
 
 		<div class="form-group" show-errors>
 			<label for="periodicity-input" class="col-sm-2 control-label" translate="project.periodicity"></label>
-			<div class="col-sm-10">
+			<div class="col-sm-10" acl-has-project-role="owner" acl-fallback="'project.'+form.periodicity|translate">
 				<select class="form-control"
 						name="periodicity"
 						id="periodicity-input"
@@ -44,7 +44,7 @@
 			<div class="form-group" show-errors>
 				<label for="periodicity" class="col-sm-2 control-label" translate="shared.begin"></label>
 				<div class="col-sm-10">
-					<div class="input-group">
+					<div class="input-group" acl-has-project-role="owner">
 						<div class="input-group-addon">
 							<input type="checkbox" ng-model="form.useProjectStart" />
 							{{'project.begin'|translate}}
@@ -57,13 +57,18 @@
 							   name="start"
 							   ng-required="!form.useProjectStart" />
 					</div>
+
+					<p class="form-control-static" acl-lacks-project-role="owner">
+						<span ng-if="form.useProjectStart" translate="project.begin"></span>
+						<span ng-if="!form.useProjectStart">form.start</span>
+					</p>
 				</div>
 			</div>
 
 			<div class="form-group" show-errors>
 				<label for="periodicity" class="col-sm-2 control-label" translate="shared.end"></label>
 				<div class="col-sm-10">
-					<div class="input-group">
+					<div class="input-group" acl-has-project-role="owner">
 						<div class="input-group-addon">
 							<input type="checkbox" ng-model="form.useProjectEnd" />
 							{{'project.end'|translate}}
@@ -76,6 +81,11 @@
 							   name="end"
 							   ng-required="!form.useProjectEnd" />
 					</div>
+
+					<p class="form-control-static" acl-lacks-project-role="owner">
+						<span ng-if="form.useProjectEnd" translate="project.end"></span>
+						<span ng-if="!form.useProjectEnd">{{form.end}}</span>
+					</p>
 				</div>
 			</div>
 		</div>
@@ -84,7 +94,7 @@
 	<fieldset>
 		<legend translate="shared.indicators"></legend>
 		
-		<table class="table table-bordered table-stripped">
+		<table class="table table-bordered table-stripped" acl-has-project-role="owner">
 			<tr ng-repeat="indicator in chosenIndicators">
 				<td>
 					<input id="ind-{{indicator.id}}" type="checkbox" ng-disabled="indicator.disabled" ng-model="indicator.selected" ng-change="updateFields()" />
@@ -92,10 +102,14 @@
 				<td><label style="font-weight: normal" for="ind-{{indicator.id}}">{{indicatorsById[indicator.id].name}}</label></td>
 			</tr>
 		</table>
+
+		<span acl-lacks-project-role="owner">
+			{{chosenIndicators|getObjects:indicatorsById|pluck:'name'|join:', '}}
+		</span>
 	</fieldset>
 
 	<fieldset>
-		<legend translate="shared.input_form"></legend>
+		<legend translate="project.input_form"></legend>
 		
 		<table class="table table-bordered table-stripped">
 			<thead>
@@ -134,15 +148,16 @@
 		</table>
 	</fieldset>
 
-	<br/>
-	<button ng-click="save()" ng-disabled="formForm.$invalid || isUnchanged()" class="btn btn-primary">
-		<i class="fa fa-floppy-o"></i>
-		<span translate="shared.save"></span>
-	</button>
+	<div acl-has-project-role="owner">
+		<br/>
+		<button ng-click="save()" ng-disabled="formForm.$invalid || isUnchanged()" class="btn btn-primary">
+			<i class="fa fa-floppy-o"></i>
+			<span translate="shared.save"></span>
+		</button>
 
-	<button ng-click="reset()" class="btn btn-default">
-		<i class="fa fa-undo"></i>
-		<span translate="shared.remove_changes"></span>
-	</button>
-
+		<button ng-click="reset()" class="btn btn-default">
+			<i class="fa fa-undo"></i>
+			<span translate="shared.remove_changes"></span>
+		</button>
+	</div>
 </form>
