--- a/dev/partials/projects/user-list.html
+++ b/dev/partials/projects/user-list.html
@@ -1,14 +1,14 @@
 <ol class="breadcrumb">
 	<li><a ui-sref="main.projects" translate>shared.projects</a></li>
 	<li><a ui-sref="main.project.logical_frame({projectId: project._id})">{{project.name}}</a></li>
-	<li class="active" translate>shared.users</li>
+	<li class="active" translate="project.users"></li>
 </ol>
 
 <form class="form-horizontal" role="form" name="usersForm" novalidate>
 
 	<div class="form-group">
 		<label for="input-owner" class="col-sm-2 control-label" translate="project.owners"></label>
-		<div class="col-sm-10">
+		<div class="col-sm-10" acl-has-project-role="owner" acl-fallback="project.owners|join:', '">
 			<ui-select multiple ng-model="project.owners" theme="bootstrap" required>
 				<ui-select-match placeholder="">{{$item}}</ui-select-match>
 				<ui-select-choices repeat="user in users">{{user}}</ui-select-choices>
@@ -17,23 +17,25 @@
 	</div>
 
 	<div class="form-group">
-		<label for="input-input" class="col-sm-2 control-label" translate="project.dataEntyOperators"></label>
-		<div class="col-sm-10">
-			<ui-select multiple ng-model="project.dataEntyOperators" theme="bootstrap" required>
+		<label for="input-input" class="col-sm-2 control-label" translate="project.dataEntryOperators"></label>
+		<div class="col-sm-10" acl-has-project-role="owner" acl-fallback="project.dataEntryOperators|join:', '">
+			<ui-select multiple ng-model="project.dataEntryOperators" theme="bootstrap" required>
 				<ui-select-match placeholder="">{{$item}}</ui-select-match>
 				<ui-select-choices repeat="user in users">{{user}}</ui-select-choices>
 			</ui-select>
 		</div>
 	</div>
 
-	<button ng-click="save()" ng-disabled="usersForm.$invalid || isUnchanged()" class="btn btn-primary">
-		<i class="fa fa-floppy-o"></i>
-		<span translate="shared.save"></span>
-	</button>
 
-	<button ng-click="reset()" class="btn btn-default">
-		<i class="fa fa-undo"></i>
-		<span translate="shared.remove_changes"></span>
-	</button>
+	<div acl-has-project-role="owner">
+		<button ng-click="save()" ng-disabled="project.owners.length == 0 || isUnchanged()" class="btn btn-primary">
+			<i class="fa fa-floppy-o"></i>
+			<span translate="shared.save"></span>
+		</button>
 
+		<button ng-click="reset()" ng-disabled="isUnchanged()" class="btn btn-default">
+			<i class="fa fa-undo"></i>
+			<span translate="shared.remove_changes"></span>
+		</button>
+	</div>
 </form>
