--- a/dev/partials/projects/form-list.html
+++ b/dev/partials/projects/form-list.html
@@ -17,7 +17,8 @@
 			<td>
 				<a class="btn btn-default btn-xs" ui-sref="main.project.form({formId: form.id})">
 					<i class="fa fa-pencil"></i>
-					<span translate="shared.edit"></span>
+					<span translate="shared.edit" acl-has-project-role="owner"></span>
+					<span translate="shared.display" acl-lacks-project-role="owner"></span>
 				</a>
 				<button class="btn btn-danger btn-xs" ng-click="delete(form.id)" acl-has-project-role="owner">
 					<i class="fa fa-remove"></i>
