--- a/dev/partials/projects/input-list.html
+++ b/dev/partials/projects/input-list.html
@@ -28,10 +28,19 @@
 			<td>{{input.inputEntityName}}</td>
 			<td>{{input.formName}}</td>
 			<td>
-				<a class="btn btn-default btn-xs"
-					ui-sref="main.project.input({period: input.period.format('YYYY-MM'), formId: input.formId, entityId: input.inputEntityId})">
+				<a class="btn btn-default btn-xs" 
+				   acl-has-project-role="input"
+				   ui-sref="main.project.input({period: input.period.format('YYYY-MM'), formId: input.formId, entityId: input.inputEntityId})">
 					<i class="fa fa-pencil-square-o"></i>
-					<span translate="project.input"></span>
+					<span translate>{{input.filled ? "shared.edit" : "project.input"}}</span>
+				</a>
+
+				<a class="btn btn-default btn-xs" 
+				   acl-lacks-project-role="input"
+				   ng-if="input.filled"
+				   ui-sref="main.project.input({period: input.period.format('YYYY-MM'), formId: input.formId, entityId: input.inputEntityId})">
+					<i class="fa fa-pencil-square-o"></i>
+					<span translate="shared.display"></span>
 				</a>
 			</td>
 		</tr>
