--- a/dev/partials/projects/logical-frame-indicator.html
+++ b/dev/partials/projects/logical-frame-indicator.html
@@ -149,7 +149,12 @@
 			<div class="form-group">
 				<label for="targets" class="col-sm-2 control-label" translate="project.targets"></label>
 				<div class="col-sm-10">
-					<div ng-repeat="target in planning.targets" class="row" style="padding-bottom: 10px">
+
+					<ul acl-lacks-project-role="owner">
+						<li ng-repeat="target in planning.targets">{{target.period}}: {{target.value}}</li>
+					</ul>
+
+					<div ng-repeat="target in planning.targets" class="row" style="padding-bottom: 10px" acl-has-project-role="owner">
 						<ng-form name="targetForm">
 							<div class="col-sm-5 form-group" show-errors style="margin: 0">
 								<input type="month" class="form-control" ng-model="target.period" name="period" required />
@@ -163,7 +168,7 @@
 						</ng-form>
 					</div>
 
-					<div class="row">
+					<div class="row" acl-has-project-role="owner">
 						<div class="col-sm-12">
 							<button class="btn btn-default" ng-click="addTarget()" translate="project.add_target"></button>
 						</div>
@@ -176,17 +181,17 @@
 
 <div class="modal-footer">
 	<div ng-if="container.indicator">
-		<button ng-click="save()" ng-disabled="planningForm.$invalid || isUnchanged()" class="btn btn-primary" ng-if="container.isNew">
+		<button ng-click="save()" ng-disabled="planningForm.$invalid || isUnchanged()" class="btn btn-primary" ng-if="container.isNew" acl-has-project-role="owner">
 			<i class="fa fa-plus"></i>
 			<span translate="shared.add"></span>
 		</button>
 
-		<button ng-click="save()" ng-disabled="planningForm.$invalid || isUnchanged()" class="btn btn-primary" ng-if="!container.isNew">
+		<button ng-click="save()" ng-disabled="planningForm.$invalid || isUnchanged()" class="btn btn-primary" ng-if="!container.isNew" acl-has-project-role="owner">
 			<i class="fa fa-floppy-o"></i>
 			<span translate="shared.save"></span>
 		</button>
 
-		<button ng-click="delete()" class="btn btn-danger" ng-if="!container.isNew">
+		<button ng-click="delete()" class="btn btn-danger" ng-if="!container.isNew" acl-has-project-role="owner">
 			<i class="fa fa-remove"></i>
 			<span translate="shared.delete">
 		</button>
